--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "build": "yarn lint && tsc",
-    "start:dev": "nodemon",
-    "start": "node dist/index.js",
+    "serve:dev": "nodemon",
+    "serve": "node dist/index.js",
     "test": "jest --runInBand --coverage --forceExit"
   },
   "dependencies": {
