--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -29,7 +31,8 @@
     "build": "yarn lint && tsc",
     "serve:dev": "nodemon",
     "serve": "node dist/index.js",
-    "test": "jest --runInBand --coverage --forceExit"
+    "test": "jest --runInBand --coverage --forceExit",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -38,6 +41,8 @@
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   }
 }
